Fix up the carbon ad on mobile
Former-commit-id: fd92e8c4513406462f59bc2eaf7c6d781464fd57
Former-commit-id: d73051a00e53284f78d5bcfa7ab46ba2327804e3
Former-commit-id: 628def7b641707f2ce0a701e6f966feec9ce28d9 [formerly 1662ed8dc4edf7cfad2296546bfd962ae6e35ade]
Former-commit-id: e7e43a220837fc8c942f7e206d2186b3d3128c59

--- a/_scss/carbon.scss
+++ b/_scss/carbon.scss
@@ -1,24 +1,19 @@
 #carbonads {
   display: block;
-  position: fixed;
   z-index: 100;
-  bottom: 1rem;
-  right: 1rem;
-  width: 140px;
-  text-align: right;
-}
 
-#carbonads a {
-  color: #333333;
-}
+  a {
+    color: #333333;
 
-#carbonads a:hover {
-  color: #4466c5;
-}
+    :hover {
+      color: #4466c5;
+    }
+  }
 
-#carbonads span {
-  display: block;
-  overflow: hidden;
+  span {
+    display: block;
+    overflow: hidden;
+  }
 }
 
 .carbon-img {
@@ -41,32 +36,49 @@
   font-size: 9px;
 }
 
-@media only screen and (min-width: 320px) and (max-width: 759px) {
+@media only screen and (min-width: 350px) and (max-width: 1289px) {
   #carbonads {
-    float: none;
-    margin: 2em auto;
-    max-width: 330px;
-  }
-  #carbonads span {
+    height: 100px;
+    margin: 1rem auto 0;
     position: relative;
+    width: 100%;
   }
-  #carbonads > span {
-    max-width: none;
-  }
-  .carbon-img {
+
+  .carbon-img img {
+    border-radius: .25rem;
     float: left;
-    margin: 0 1em 0 0;
+    margin: 0 0 .5rem 0;
+    width: 130px;
   }
+
   .carbon-text {
-    float: left;
-    margin-bottom: 0;
-    max-width: calc(100% - 130px - 1em);
-    text-align: left;
-  }
-  .carbon-poweredby {
-    position: absolute;
-    bottom: 0;
-    left: 142px;
     display: block;
+    float: left;
+    margin-left: 10px;
+    text-align: left;
+    width: 160px;
+  }
+
+  .carbon-poweredby {
+    bottom: 0;
+    display: inline-block;
+    left: 140px;
+    position: absolute;
+  }
+}
+
+@media only screen and (min-width: 700px) and (max-width: 1289px) {
+  #carbonads {
+    margin-bottom: -60px;
+  }
+}
+
+@media only screen and (min-width: 1290px)  {
+  #carbonads {
+    bottom: 1rem;
+    position: fixed;
+    right: 1rem;
+    text-align: right;
+    width: 140px;
   }
 }
